# lifegame

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
crates/lifegame-cli/: Cargo.toml
crates/lifegame-cli/src/: main.rs
crates/lifegame-cli/tests/: cli.rs
crates/lifegame-core/: Cargo.toml
crates/lifegame-core/benches/: next_generation.rs
crates/lifegame-core/src/: error.rs  grid.rs  lib.rs  patterns.rs  rules.rs  simulation.rs
crates/lifegame-core/tests/: golden.rs
crates/lifegame-wasm/: Cargo.toml
crates/lifegame-wasm/src/: lib.rs
scripts/: bench-with-rss.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: controls.ts  loop.ts  main.ts  renderer.ts  sim.ts  styles.css
