[package]
name = "lifegame-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "lifegame"
path = "src/main.rs"

[dependencies]
lifegame-core = { path = "../lifegame-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
