[package]
name = "lifegame-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
thiserror = "1"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }
bytemuck = "1"

[dev-dependencies]
sha2 = "0.10"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "next_generation"
harness = false
