[package]
name = "lifegame-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lifegame-core = { path = "../lifegame-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["panic-hook"]
panic-hook = ["console_error_panic_hook"]

# wasm-opt is disabled to keep the build portable across environments where the
# `wasm-opt` binary may be missing (CI runners, sandboxes, etc.). Flip to `true`
# in production deploys to recover ~30% size and a small speedup.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
